--- a/src/python/cgp2d/CMakeLists.txt
+++ b/src/python/cgp2d/CMakeLists.txt
@@ -14,10 +14,10 @@ add_library(_cgp2d SHARED
     cells/py_cell1vec.cxx
     cells/py_cell2vec.cxx
     py_cgp2d.cxx
-
+    py_hl_objective.cxx
     # image processing related 
     misc/py_segcompare.cxx
-    misc/py_merge.cxx
+    #misc/py_merge.cxx
     py_main.cxx
 )
 target_link_libraries(_cgp2d
